<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PercelDeliveryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Parcel Booking"
        app:titleTextColor="@color/white"
        android:background="@color/red"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:inputType="text"
                android:textColorHint="@color/hintColor"
                android:minHeight="48dp"
                android:elevation="3dp"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_address"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                android:elevation="3dp"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                android:elevation="3dp"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                android:elevation="3dp"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_type"
                android:inputType="text"
                android:minHeight="48dp"
                android:elevation="3dp"
                android:textColorHint="@color/hintColor"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_of_product_delivery"
                android:inputType="text"
                android:minHeight="48dp"
                android:elevation="3dp"
                android:textColorHint="@color/hintColor"
                android:padding="10dp"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_delivery_time"
                android:inputType="text"
                android:minHeight="48dp"
                android:elevation="3dp"
                android:padding="10dp"
                android:textColorHint="@color/hintColor"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details"
                android:inputType="text"
                android:minHeight="100dp"
                android:elevation="3dp"
                android:padding="10dp"
                android:textColorHint="@color/hintColor"
                android:background="@drawable/edit_shape"
                android:layout_marginVertical="10dp"
                android:gravity="start"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_shape"
                app:backgroundTint="@color/red_dark"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"

                />

        </LinearLayout>


    </ScrollView>

</LinearLayout>